[package]
name = "galadh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = [ "derive" ]}
env_logger = "0.9.0"
futures = "0.3.21"
log = "0.4.14"
prefix-tree = "0.5.0"
prost = "0.9.0"
thiserror = "1.0.30"
tokio = { version = "1.17", features = [ "rt-multi-thread", "time", "fs", "macros", "net",] }
tonic = "0.6.2"

[build-dependencies]
tonic-build = "0.6.2"

[[bin]]
name = "gld"
path = "src/server.rs"

[[bin]]
name = "gldctl"
path = "src/client.rs"
