[package]
name = "galadh"
version = "0.1.3"
edition = "2021"
description = "Simple key-value storage inspired by etcd"
license = "Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = [ "derive" ]}
env_logger = "0.9.0"
futures = "0.3.21"
log = "0.4.14"
prost = "0.9.0"
tokio = { version = "1.17", features = [ "rt-multi-thread", "time", "fs", "macros", "net",] }
tonic = "0.6.2"

[build-dependencies]
tonic-build = "0.6.2"

[[bin]]
name = "gldh"
path = "src/server.rs"

[[bin]]
name = "gldh-cli"
path = "src/client.rs"
